Add Utter Sense application components and enhance knowledge article retrieval
- Introduced a new Salesforce application 'Utter Sense' with a custom application metadata file.
- Created a FlexiPage for the Voice Call interface, integrating various components for enhanced user experience.
- Updated the knowledge article retrieval logic in the Apex controller to utilize Data Cloud API instead of SOSL.
- Enhanced the Lightning Web Component for knowledge recommendations with a search input and placeholder handling.
- Added static resources for the Einstein logo used in the component.
- Included a package manifest to manage the new components and resources.

--- a/force-app/main/default/classes/UtterSenseKnowledgeRecController.cls
+++ b/force-app/main/default/classes/UtterSenseKnowledgeRecController.cls
@@ -9,20 +9,66 @@ public with sharing class UtterSenseKnowledgeRecController {
 			// Escape special characters in search string
 			searchString = String.escapeSingleQuotes(searchString);
 
-			// Build SOSL query
-			String searchQuery =
-				'FIND :searchString IN ALL FIELDS RETURNING Knowledge__kav(' +
-				'Id, Title, Summary, UrlName, ArticleNumber, LastPublishedDate ' +
-				'WHERE PublishStatus = \'Online\' AND Language = \'en_US\' ' +
-				'ORDER BY LastPublishedDate DESC LIMIT 5)';
+			// Build Data Cloud Query
+			String dataCloudQuery =
+				'SELECT Id, Title, Summary, UrlName, ArticleNumber, LastPublishedDate ' +
+				'FROM ssot__KnowledgeArticle__dlm ' +
+				'WHERE Title LIKE \'%' +
+				searchString +
+				'%\' ' +
+				'OR Summary LIKE \'%' +
+				searchString +
+				'%\' ' +
+				'AND PublishStatus = \'Online\' ' +
+				'AND Language = \'en_US\' ' +
+				'ORDER BY LastPublishedDate DESC ' +
+				'LIMIT 5';
 
-			List<List<SObject>> searchResults = Search.query(searchQuery);
+			// Make HTTP callout to Data Cloud Query API
+			Http http = new Http();
+			HttpRequest request = new HttpRequest();
+			request.setEndpoint('callout:DataCloudAPI/api/v2/query');
+			request.setMethod('POST');
+			request.setHeader('Content-Type', 'application/json');
 
-			if (!searchResults.isEmpty() && !searchResults[0].isEmpty()) {
-				return (List<Knowledge__kav>) searchResults[0];
+			// Construct the request body
+			Map<String, Object> requestBody = new Map<String, Object>{
+				'sql' => dataCloudQuery,
+				'options' => new Map<String, Object>{ 'limit' => 5 }
+			};
+
+			request.setBody(JSON.serialize(requestBody));
+
+			// Send the request
+			HttpResponse response = http.send(request);
+
+			if (response.getStatusCode() == 200) {
+				// Parse the response and convert to Knowledge__kav records
+				Map<String, Object> responseBody = (Map<String, Object>) JSON.deserializeUntyped(
+					response.getBody()
+				);
+				List<Object> data = (List<Object>) responseBody.get('data');
+
+				List<Knowledge__kav> articles = new List<Knowledge__kav>();
+				for (Object record : data) {
+					Map<String, Object> fields = (Map<String, Object>) record;
+					Knowledge__kav article = new Knowledge__kav(
+						Id = (String) fields.get('Id'),
+						Title = (String) fields.get('Title'),
+						Summary = (String) fields.get('Summary'),
+						UrlName = (String) fields.get('UrlName')
+					);
+					articles.add(article);
+				}
+				return articles;
 			}
 
-			return new List<Knowledge__kav>();
+			throw new AuraHandledException(
+				'Error querying Data Cloud: ' +
+					response.getStatusCode() +
+					' ' +
+					response.getStatus()
+			);
 		} catch (Exception e) {
 			System.debug(
 				LoggingLevel.ERROR,
