Refactor UtterSenseKnowledgeRecController and add new GenAiPromptTemplate for enhanced AI-driven responses
- Simplified the getRecommendedResponse method to utilize ConnectApi for generating responses based on user queries.
- Introduced a new GenAiPromptTemplate for the 'Utter_Sense_FAQ' to standardize response generation.
- Updated package manifest to include the new prompt template and removed outdated components.

--- a/force-app/main/default/classes/UtterSenseKnowledgeRecController.cls
+++ b/force-app/main/default/classes/UtterSenseKnowledgeRecController.cls
@@ -1,63 +1,40 @@
 public with sharing class UtterSenseKnowledgeRecController {
 	@AuraEnabled
 	public static String getRecommendedResponse(String searchString) {
-		aiplatform.ModelsAPI.createGenerations_Request request = new aiplatform.ModelsAPI.createGenerations_Request();
-
-		// Specify model
-		request.modelName = 'sfdc_ai__DefaultGPT4Omni';
-
-		// Create request body
-		aiplatform.ModelsAPI_GenerationRequest requestBody = new aiplatform.ModelsAPI_GenerationRequest();
-		request.body = requestBody;
-		System.debug('Value of request: ' + JSON.serializePretty(request));
-
-		// Add prompt to body
-		ResponseWrapper wrapperData = preparePromptContent(searchString);
-		requestBody.prompt = wrapperData.promptContent;
-		System.debug('Value of wrapperData: ' + JSON.serializePretty(wrapperData));
-		try {
-			// Make request
-			aiplatform.ModelsAPI modelsAPI = new aiplatform.ModelsAPI();
-			aiplatform.ModelsAPI.createGenerations_Response response = modelsAPI.createGenerations(
-				request
-			);
-			wrapperData.generatedText = response.Code200.generation.generatedText;
-			System.debug('Value of response: ' + JSON.serializePretty(response));
-		} catch (aiplatform.ModelsAPI.createGenerations_ResponseException e) {
-			System.debug('Error: ' + e.getMessage());
-		}
-		return wrapperData.generatedText;
-	}
-
-	public static ResponseWrapper preparePromptContent(String searchString) {
-		Map<String, String> property = new Map<String, String>();
-		property.put('query', searchString);
-		ConnectApi.WrappedValue propertyValue = new ConnectApi.WrappedValue();
-		propertyValue.value = property;
+		// Create inputs
+		ConnectApi.WrappedValue searchStringPropValue = new ConnectApi.WrappedValue();
+		searchStringPropValue.value = searchString;
 		Map<String, ConnectApi.WrappedValue> inputParams = new Map<String, ConnectApi.WrappedValue>();
-		inputParams.put('Input:Query', propertyValue);
-
+		inputParams.put('Input:Query', searchStringPropValue);
+		inputParams.put('Input:RetrieverIdOrName', '');
+		// Configure invocation parameters
 		ConnectApi.EinsteinPromptTemplateGenerationsInput executeTemplateInput = new ConnectApi.EinsteinPromptTemplateGenerationsInput();
 		executeTemplateInput.additionalConfig = new ConnectApi.EinsteinLlmAdditionalConfigInput();
 		executeTemplateInput.additionalConfig.applicationName = 'PromptBuilderPreview';
 		executeTemplateInput.isPreview = false;
 		executeTemplateInput.inputParams = inputParams;
 
-		ConnectApi.EinsteinPromptTemplateGenerationsRepresentation generationsOutput = ConnectApi.EinsteinLLM.generateMessagesForPromptTemplate(
-			'Utter_Sense_FAQ',
-			executeTemplateInput
-		);
+		System.debug('Execute Template Input: ' + executeTemplateInput);
 
-		ConnectApi.EinsteinLLMGenerationItemOutput output = generationsOutput.generations[0];
-		ResponseWrapper outputResponse = new ResponseWrapper();
-		outputResponse.generatedText = output.text;
-		return outputResponse;
-	}
+		try {
+			// Call the service
+			ConnectApi.EinsteinPromptTemplateGenerationsRepresentation generationsOutput = ConnectApi.EinsteinLLM.generateMessagesForPromptTemplate(
+				'Utter_Sense_FAQ',
+				executeTemplateInput
+			);
 
-	public class ResponseWrapper {
-		@AuraEnabled
-		public String promptContent;
-		@AuraEnabled
-		public String generatedText;
+			System.debug('Citations: ' + generationsOutput.citations);
+			System.debug('Generation Errors: ' + generationsOutput.generationErrors);
+			System.debug('Generations: ' + generationsOutput.generations);
+			System.debug('Prompt: ' + generationsOutput.prompt);
+			System.debug(
+				'Prompt Template Dev Name: ' + generationsOutput.promptTemplateDevName
+			);
+			ConnectApi.EinsteinLLMGenerationItemOutput response = generationsOutput.generations[0];
+			return response.text;
+		} catch (Exception e) {
+			System.debug(e.getMessage());
+			throw e;
+		}
 	}
 }
