--- a/force-app/main/default/classes/AudioRecorderController.cls
+++ b/force-app/main/default/classes/AudioRecorderController.cls
@@ -155,4 +155,57 @@ public with sharing class AudioRecorderController {
 			);
 		}
 	}
+
+	@AuraEnabled
+	public static Map<String, Object> createConversation() {
+		try {
+			AgentMessagingService.MessagingResponse response = AgentMessagingService.createConversation();
+			if (response.error != null) {
+				throw new AuraHandledException(response.error);
+			}
+			return new Map<String, Object>{
+				'conversationId' => response.conversationId,
+				'messageId' => response.messageId
+			};
+		} catch (Exception e) {
+			throw new AuraHandledException(e.getMessage());
+		}
+	}
+
+	@AuraEnabled
+	public static Map<String, Object> sendMessage(String conversationId, String message, String replyToMessageId) {
+		try {
+			if (String.isBlank(conversationId)) {
+				throw new AuraHandledException('Conversation ID is required');
+			}
+			
+			AgentMessagingService.MessagingResponse response = AgentMessagingService.sendMessage(conversationId, message, replyToMessageId);
+			if (response.error != null) {
+				throw new AuraHandledException(response.error);
+			}
+			return new Map<String, Object>{
+				'messageId' => response.messageId,
+				'text' => response.text
+			};
+		} catch (Exception e) {
+			throw new AuraHandledException(e.getMessage());
+		}
+	}
+
+	@AuraEnabled
+	public static Map<String, Object> getAccessToken() {
+		try {
+			AgentMessagingService.MessagingResponse response = AgentMessagingService.getAccessToken();
+			if (response.error != null) {
+				throw new AuraHandledException(response.error);
+			}
+			return new Map<String, Object>{
+				'accessToken' => response.accessToken,
+				'tokenType' => response.tokenType,
+				'tokenExpiry' => response.tokenExpiry
+			};
+		} catch (Exception e) {
+			throw new AuraHandledException(e.getMessage());
+		}
+	}
 }
